# paperbanana

./: .gitignore  Dockerfile  README.md  README_HF.md  aesthetic_guidelines.py  app.py  config.py  examples.py  load_reference_set.py  paperbanana.py  pyproject.toml  requirements.txt  utils.py
agents/: __init__.py  critic.py  planner.py  retriever.py  stylist.py  visualizer.py
data/: spotlight_reference_set.json
docs/: paperbanana.md
